# stigma_i

./: Plan.txt  README.md  pyproject.toml
g2/DCSH/: best_model.h5  go.py  go__keras.py  go_ln.py  go_ln__keras.py  iesha.py  igna.py  neuro_kernel.py  tt.py
g2/PROS/: go_aggr.py
stigma_i/: recurrent.py  reviser_model.py  reviser_runner.py  reviser_runner_true_ts.py  tests.py
stigma_i/hub/CS1/: blade_compare.py  blade_runner.py  simple_compare.py
stigma_i/hub/CS2/: blade_runner.py  simple_compare.py
stigma_i/hub/CS3/: blade_compare.py  blade_runner.py  simple_compare.py
stigma_i/hub/CS4/: blade_compare.py  blade_runner.py  simple_compare.py
stigma_i/hub/CS5/: blade_compare.py  blade_runner.py  simple_compare.py
stigma_i/hub/CS6/: blade_compare.py  blade_runner.py
stigma_i/hub/CS7/: blade_compare.py  blade_runner.py
stigma_i/hub/CS8/: blade_runner.py
stigma_i/hub/TS1/: blade_compare_v1.py  blade_compare_v3.py  blade_compare_v4.py  blade_runner.py  simple_compare.py  ts_reviser.py
stigma_i/hub/TS2/: blade_runner.py
stigma_i/hub/TS3/: blade_runner.py
stigma_i/hub/TS4/: blade_runner.py
stigma_i/hub/TS5/: blade_runner.py
stigma_i/hub/TS6/: blade_runner.py
stigma_i/hub/TS7/: blade_runner.py
stigma_i/hub/TS8/: blade_runner.py
